# Certificate_Forgery_Detection_System

./: .gitignore  pyproject.toml
data/train/: _classes.csv
data/valid/: _classes.csv
docs/: README.md  technical-approach.md
scripts/: classify_text_humanOai.py  extract_metadata.py  ocr_plus_analysis.py  server.py  test_pred_vit_classifier.py  train_vit_classifier.py
tests/: _classes.csv
workflows/: Document_Forgery_Detection_workflow.json
